plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wemo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot 스타터 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok 의존성 (컴파일 타임 어노테이션 처리)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 데이터베이스 연결
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 테스트 관련 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// JUnit 5 런처
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Swagger (API 문서화)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// 검증 관련 의존성
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JWT (JSON Web Token) 라이브러리
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Redis 관련 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// queryDsl 관련 의존성
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	implementation "com.querydsl:querydsl-core:5.0.0"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.0"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"

	// aws S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3'

}

tasks.processResources {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// 경로설정
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
	main {
		java {
			srcDirs += querydslDir
		}
	}
}

tasks.withType(JavaCompile) {
	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}
